changed some bits
